fix: commented unnecessary code

--- a/frontend/src/assets/css/styles.scss
+++ b/frontend/src/assets/css/styles.scss
@@ -32,8 +32,8 @@ code {
 .App-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   font-size: calc(10px + 2vmin);
 }
 
