fix: redesigned styles according to BEM methodology

--- a/frontend/src/assets/css/styles.scss
+++ b/frontend/src/assets/css/styles.scss
@@ -14,11 +14,11 @@ code {
     monospace;
 }
 
-.App {
+.app {
   text-align: center;
 }
 
-.App-navigation-list {
+.app__navigation-list {
   display: flex;
   justify-content: center;
   padding: 0;
