fix: change sections positioning, small corrections

--- a/frontend/src/components/profile/components/profile-info/add-section/add-section.scss
+++ b/frontend/src/components/profile/components/profile-info/add-section/add-section.scss
@@ -1,7 +1,7 @@
 .add-section {
-  width: 100%;
   border-radius: 10px;
   margin: 12px 0;
+  padding-bottom: 44px;
   background-color: #fff;
 }
 
@@ -23,7 +23,7 @@
 
   &__add-button {
     padding: 6px 23px;
-    border: 2px solid #fff;
+    border: 3px solid #fff;
     border-radius: 30px;
     background: none;
     color: #fff;
