fix: changed dimension

--- a/frontend/src/assets/css/typography.scss
+++ b/frontend/src/assets/css/typography.scss
@@ -3,12 +3,12 @@
 
 /* stylelint-disable */
 
-$font-size-1:                12px !default;
-$font-size-2:                14px !default;
-$font-size-3:                16px !default;
-$font-size-4:                18px !default;
-$font-size-6:                24px !default;
-$font-size-7:                26px !default;
+$font-size-7:                0.75rem !default;
+$font-size-6:                0.875rem !default;
+$font-size-4:                1rem !default;
+$font-size-3:                1.125rem !default;
+$font-size-2:                1.5rem !default;
+$font-size-1:                1.625rem !default;
 
 $custom-font-sizes: (
   1: $font-size-1,
