--- a/frontend/src/assets/css/typography.scss
+++ b/frontend/src/assets/css/typography.scss
@@ -5,8 +5,9 @@
 
 $font-size-7:                0.75rem !default;
 $font-size-6:                0.875rem !default;
-$font-size-4:                1rem !default;
-$font-size-3:                1.125rem !default;
+$font-size-5:                1rem !default;
+$font-size-4:                1.125rem !default;
+$font-size-3:                1.25rem !default;
 $font-size-2:                1.5rem !default;
 $font-size-1:                1.625rem !default;
 
@@ -15,6 +16,7 @@ $custom-font-sizes: (
   2: $font-size-2,
   3: $font-size-3,
   4: $font-size-4,
+  5: $font-size-5,
   6: $font-size-6,
   7: $font-size-7,
 ) !default;
