--- a/frontend/src/components/main-page/opportunities/opportunities.scss
+++ b/frontend/src/components/main-page/opportunities/opportunities.scss
@@ -1,38 +1,20 @@
 .opportunities{
     &__cart{
         cursor:pointer;
-        background-color: rgba(255, 255, 255, 0.295);
         transition: all 0.5s linear;
         &:hover{
-            background-color:rgba(207, 204, 204, 0.781);
+            background-color:rgba(207, 204, 204, 0.781) !important;
         }
-    }
-    &__header{
-        background-color: #4F00B5;
-        color: #fff;
-    }
-    &__title{
-        font-size:1rem;
-    }
-    &__add-opportunity-btn{
-        font-size:0.7rem !important;
     }
     &__cart--text{
-        font-size:0.8rem;
+        max-width:70%;
     }
     &__cart--text-item{
-        &:last-child{
-            margin-bottom:0 !important;
-        }
-    }
-    &__cart--tags{
-        font-size: 0.8rem;
-        color: #0070f5;
+        text-overflow: ellipsis;
+        max-width:100%;
     }
     &__cart--tags-item{
-        background-color: #4F00B5;
         opacity: 0.4;
-        color:#fff;
         padding:2px 0;
     }
     &__type{
