fix: extra styles removed && react bootstrap components were replaced with divs with classes

--- a/frontend/src/assets/css/buttons.scss
+++ b/frontend/src/assets/css/buttons.scss
@@ -1,66 +1,13 @@
-%btn-growup {
+@import '~bootstrap/scss/variables';
+
+.btn {
   border-radius: 70px !important;
-  font-weight: bold !important;
-  font-size: 16px !important;
 }
 
-%btn-growup-outline {
-  background-color: transparent !important;
-  border: 2px solid !important;
-
-  padding: 0.2rem 1.5rem !important;
-  transition: 0.3s;
+.btn-hover-gu-purple:hover {
+  color: $purple-dark !important;
 }
 
-.btn-growup-primary {
-  @extend %btn-growup;
-
-  background-color: $violet !important;
+.btn-hover-gu-white:hover {
   color: $white !important;
-}
-
-.btn-growup-outline-primary {
-  @extend %btn-growup;
-  @extend %btn-growup-outline;
-
-  color: $violet !important;
-  border-color: $violet !important;
-
-  &:hover {
-    color: $white !important;
-    background: $violet !important;
-  }
-}
-
-.btn-growup-secondary {
-  @extend %btn-growup;
-
-  background-color: $pink !important;
-  color: $white !important;
-}
-
-.btn-growup-outline-secondary {
-  @extend %btn-growup;
-  @extend %btn-growup-outline;
-
-  color: $pink !important;
-  border-color: $pink !important;
-
-  &:hover {
-    color: $white !important;
-    background: $pink !important;
-  }
-}
-
-.btn-growup-outline-white {
-  @extend %btn-growup;
-  @extend %btn-growup-outline;
-
-  color: $white !important;
-  border-color: $white !important;
-
-  &:hover {
-    color: $violet !important;
-    background: $white !important;
-  }
 }
