--- a/frontend/src/components/profile/components/profile-info/profile-info.scss
+++ b/frontend/src/components/profile/components/profile-info/profile-info.scss
@@ -1,14 +1,46 @@
 .profile-info {
+  display: grid;
+  grid-template-areas:
+  "p-header"
+  "p-tabs"
+  "p-main";
   padding-top: 16px;
   background-color: #F6F7F9;
+}
 
-  .header-wrapper {
-    width: 100%;
-    background-color: #fff;
-    padding: 0 46px;
+.profile-container {
+  padding: 0 46px;
+}
+
+.profile-container_header {
+  width: 100%;
+  background-color: #fff;
+  grid-area: p-header;
+}
+
+.profile-container_tabs {
+  margin: 13px 0;
+  grid-area: p-tabs;
+}
+
+.profile-container_main{
+  grid-area: p-main;
+}
+
+@media screen and (max-width: 576px) {
+  .header-wrapper,
+  .main-wrapper {
+    padding: 0;
   }
 
-  .main-wrapper {
-    padding: 46px;
+  .profile-info {
+    grid-template-areas:
+    "p-tabs"
+    "p-header"
+    "p-main";
+  }
+
+  .profile-container {
+    padding: 0;
   }
 }
