--- a/frontend/src/components/profile/components/profile-info/add-section/add-section.scss
+++ b/frontend/src/components/profile/components/profile-info/add-section/add-section.scss
@@ -1,51 +1,66 @@
 .add-section {
   border-radius: 10px;
   margin: 12px 0;
-  padding-bottom: 44px;
-  background-color: #fff;
 }
 
 .add-section-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-radius: 10px 10px 0 0;
   background-color: #463DA8;
-  color: #fff;
   padding: 26px 38px;
 
   &__title {
     font-size: 18px;
-    font-weight: 700;
     line-height: 25px;
-    margin: 0;
   }
 
-  &__add-button {
-    padding: 6px 23px;
-    border: 3px solid #fff;
+  &__add {
     border-radius: 30px;
-    background: none;
-    color: #fff;
+    border: 2px solid #fff;
     font-size: 16px;
-    font-weight: 700;
+    color: #fff;
+    padding: 6px 23px;
     line-height: 22px;
+  }
+  &__add-icon {
+    font-size: 22px;
   }
 }
 
 .add-section-content {
-  position: relative;
-  margin-top: 50px;
-  margin-right: 40px;
+  padding: 50px 40px 40px 40px;
+}
 
-  &::before {
-    position: absolute;
-    content: "";
-    display: block;
-    height: calc(100% + 7px);
-    width: 2px;
-    border: 1px solid #E1DBEA;
-    margin-left: 40px;
-    top: -7px
+
+@media screen and (max-width: 576px) {
+  .add-section {
+    margin: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .add-section  + .add-section {
+    border-radius: 0;
+  }
+
+  .add-section-header {
+    &__add {
+      position: relative;
+      color: #fff;
+      width: 50px;
+      height: 50px;
+      border: 2px solid #fff;
+      border-radius: 100%;
+
+      & > span {
+        display: none;
+      }
+    }
+
+    &__add-icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
