--- a/frontend/src/components/profile/components/profile-info/career-card/career-card.scss
+++ b/frontend/src/components/profile/components/profile-info/career-card/career-card.scss
@@ -1,23 +1,61 @@
 .career-card {
-  border: 1px solid #E1DBEA;
-  margin: 5px 15px 20px 55px;
-  padding-top: 20px;
-  border-radius: 10px;
+  border-color: #E1DBEA;
+  margin: 5px 15px 20px 15px;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    display: block;
+    height: calc(100% + 30px);
+    width: 1px;
+    background-color: #E1DBEA;
+    margin-left: -15px;
+    top: -30px
+  }
+}
+
+.career-card-time {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  text-align: left;
+  color:#4F00B5;
+  position: absolute;
+  top: -18px;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 100%;
+    width: 8px;
+    height: 8px;
+    background-color: #463DA8;
+    margin-left: calc(-15px);
+    transform: translateX(-45%);
+    top: 8px;
+  }
+}
+
+.career-card:first-child {
+  border-color: #E1DBEA;
+  margin: 5px 15px 20px 15px;
+
+
+  &::before {
+    height: calc(100% + 7px);
+    top: -7px
+  }
 }
 
 .career-card-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 26px;
-  padding-bottom: 26px;
+  text-align: start;
 
   &__title {
     color: #1D1D1D;
-    font-weight: bold;
     font-size: 18px;
     line-height: 25px;
-    margin-bottom: 8px;
   }
 
   &__role, &__company {
@@ -25,9 +63,6 @@
     font-weight: 600;
     line-height: 19px;
     color: #1D1D1D;
-    margin: 0;
-    margin-bottom: 5px;
-    text-align: left;
 
     span {
       color: #808C9C;
@@ -36,30 +71,22 @@
   }
 }
 
-
 .career-card-footer {
-  display: flex;
-  justify-content: space-between;
   border-top: 1px solid #E1DBEA;
-  padding-left: 26px;
-  width: 100%;
-  height: 46px;
 
   &__duration {
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
     color: #808C9C;
-    margin: 0;
-    align-self: center;
+  }
+
+  &__calendar-icon {
+    margin-right: 9px;
   }
 }
 
 .career-action-buttons {
-  margin-right: 23px;
-  align-self: center;
-  display: flex;
-
   &__delete,
   &__edit {
     width: 15px;
