--- a/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
+++ b/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
@@ -1,45 +1,66 @@
 .edit-section {
   border-radius: 10px;
   margin: 12px 0;
-  background-color: #fff;
 }
 
 .edit-section-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-radius: 10px 10px 0 0;
-  background-color: #fff;
   color: #463DA8;
   padding: 26px 38px;
   border-bottom: 1px solid #E1DBEA;
 
   &__title {
     font-size: 18px;
-    font-weight: 700;
     line-height: 25px;
-    margin: 0;
   }
 
-  &__edit-button {
+  &__edit {
     padding: 6px 23px;
     border: 2px solid #EE2A64;
     border-radius: 30px;
-    background: none;
     font-size: 16px;
-    font-weight: 700;
     line-height: 22px;
     color: #EE2A64;
   }
 
   &__edit-icon {
     margin-right: 10px;
+    width: 15px;
   }
 }
 
 .edit-section-content {
   padding: 20px 28px 38px 34px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
+}
+
+@media screen and (max-width: 576px) {
+  .edit-section {
+    margin: 0;
+    border-radius: 0;
+  }
+
+  .edit-section-header {
+    background-color: #463DA8;
+    color: #fff;
+
+    &__edit {
+      position: relative;
+      color: #fff;
+      width: 50px;
+      height: 50px;
+      border: 2px solid #fff;
+      border-radius: 100%;
+
+      & > span {
+        display: none;
+      }
+    }
+
+    &__edit-icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
