--- a/frontend/src/components/profile/components/profile-info/education-card/education-card.scss
+++ b/frontend/src/components/profile/components/profile-info/education-card/education-card.scss
@@ -1,23 +1,13 @@
 .education-card {
-  border: 1px solid #E1DBEA;
-  margin: 5px 15px 20px 55px;
-  padding-top: 20px;
-  border-radius: 10px;
+  border-color: #E1DBEA;
+  margin: 5px 15px 20px 15px;
 }
 
-.education-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 26px;
-  padding-bottom: 26px;
-
+.education-card-info {
   &__title {
     color: #1D1D1D;
-    font-weight: bold;
     font-size: 18px;
     line-height: 25px;
-    margin-bottom: 8px;
   }
 
   &__universitet {
@@ -32,8 +22,6 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 19px;
-    margin: 0;
-    margin-bottom: 5px;
     text-align: left;
 
     span {
@@ -44,28 +32,17 @@
 }
 
 .education-footer {
-  display: flex;
-  justify-content: space-between;
   border-top: 1px solid #E1DBEA;
-  padding-left: 26px;
-  width: 100%;
-  height: 46px;
 
   &__duration {
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
     color: #808C9C;
-    margin: 0;
-    align-self: center;
   }
 }
 
 .education-action-buttons {
-  margin-right: 23px;
-  align-self: center;
-  display: flex;
-
   &__delete,
   &__edit {
     width: 15px;
