--- a/frontend/src/components/profile/components/profile-info/profile-main/profile-main.scss
+++ b/frontend/src/components/profile/components/profile-info/profile-main/profile-main.scss
@@ -2,14 +2,14 @@
   display: flex;
   width: 100%;
   gap: 15px;
+}
 
-  .left-side {
-    width: 59%
-  }
+.left-side {
+  width: 59%
+}
 
-  .right-side {
-    width: 40%;
-  }
+.right-side {
+  width: 40%;
 }
 
 .group {
@@ -28,4 +28,16 @@
 
 .group + .group {
   margin-top: 50px;
+}
+
+
+@media screen and (max-width: 768px) {
+  .profile-main {
+    display: block;
+  }
+
+  .left-side,
+  .right-side {
+    width: auto;
+  }
 }
