--- a/frontend/src/components/profile/components/profile-info/tabs/tabs.scss
+++ b/frontend/src/components/profile/components/profile-info/tabs/tabs.scss
@@ -1,13 +1,11 @@
 .tabs {
-  display: flex;
   font-size: 16px;
   font-weight: 600;
   line-height: 22px;
-  gap:32px;
+  gap: 1.5rem;
 
   &__item {
     color: #1D1D1D;
-    text-decoration: none;
     padding-left: 2px;
     padding-right: 2px;
 
@@ -17,7 +15,7 @@
   }
 }
 
-.active-tab {
+.tabs__item_active {
   color:#463DA8;
   position: relative;
   padding-bottom: 9px;
@@ -33,5 +31,37 @@
     border-radius: 1px;
     bottom: 0;
     left: 0
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .tabs {
+    width: fit-content;
+    margin: 0 auto;
+    border-radius: 8px;
+
+    &__item {
+      color: #1D1D1D;
+      padding: .5rem 1.2rem;
+      border-radius: 8px;
+      margin: 2px;
+
+      &:hover {
+        color: #1D1D1D;
+      }
+    }
+  }
+
+  .tabs__item_active {
+    background-color: #EE2A64;
+    color: #fff;
+
+    &:after {
+      content: none;
+    }
+
+    &:hover {
+      color: #fff;
+    }
   }
 }
