--- a/frontend/src/components/quiz/quiz-item/styles.scss
+++ b/frontend/src/components/quiz/quiz-item/styles.scss
@@ -1,3 +1,5 @@
+@import 'assets/css/styles';
+
 .quiz {
   margin: 20px 0;
   text-align: center;
@@ -7,22 +9,19 @@
   }
 
   .range {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 15px;
     width: 80%;
     margin: 0 auto;
   }
 }
 
-@media screen and (max-width: 992px) {
+@include media-breakpoint-down(md) {
   .range {
     width: 80%;
   }
 }
 
-@media screen and (max-width: 576px) {
+@include media-breakpoint-down(sm) {
   .range {
 
     &__end-title, &__start-title{
