--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,37 +1,21 @@
+/* stylelint-disable */
+@import "../../assets/css/styles.scss";
+/* stylelint-enable */
+
 $white-blue: #F0F3F9;
 
 .header-section {
-    z-index: 10;
+    z-index: 2;
     background-color: #fff;
-}
-
-.header-container {
-    max-height: 88.5px;
-    padding-right: 1.2225em;
-    padding-top: .6em;
-    padding-bottom: .6em;
-    @media screen and ( min-width: 47.9375em) {
-        padding-right: 3.2225em;
-        padding-top: 1.375em;
-        padding-bottom: 1.34375em;
-    }
 }
 
 .form-section {
     &__search-icon {
         top: 38%;
-        margin-left: .85em;
     }
-    &__search-input {
-        margin-right: 2em;
-    }
-    @media screen and ( min-width: 47.9375em) {
+    @include media-breakpoint-up(md) {
         &__search-icon {
-            margin-left: 1.425625em;
             top: 43%;
-        }
-        &__search-input {
-            margin-right: 2.29375em;
         }
     }
 }
@@ -39,8 +23,8 @@ $white-blue: #F0F3F9;
 .search-icon {
     width: 20px;
     height: 20px;
-    opacity: 0.4;
-    @media screen and ( min-width: 47.9375em) {
+    opacity: .4;
+    @include media-breakpoint-up(md) {
         width: 15px;
         height: 15px;
     }
@@ -51,10 +35,7 @@ $white-blue: #F0F3F9;
     width: 45px;
     background-color: $white-blue;
     border-radius: 33%;
-    padding-left: 3.6em;
-    padding-top: 0.9375em;
-    padding-bottom: 0.9375em;
-    @media screen and ( min-width: 47.9375em) {
+    @include media-breakpoint-up(md) {
         width: 280px;
         border-radius: 50px;
     }
@@ -62,22 +43,14 @@ $white-blue: #F0F3F9;
 
 .search-input::placeholder {
     line-height: 1.36em;
-    opacity: 0.4;
+    opacity: .4;
 }
 
 .notification-section {
     cursor: pointer;
-    &__icon {
-        margin-right: 1.5em;
-    }
     &__notification-pointer {
         left: 11px;
         top: 3px;
-    }
-    @media screen and ( min-width: 47.9375em) {
-        &__icon {
-            margin-right: 2.414375em;
-        }
     }
 }
 
