fix: change app styles

--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -5,7 +5,7 @@
 .main-container {
   margin-left: 4em;
   margin-top: 5em;
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-up(md) {
     margin-left: 16.875em;
     margin-top: 6.25em;
   }
