feat: skill overview

--- a/frontend/src/assets/css/styles.scss
+++ b/frontend/src/assets/css/styles.scss
@@ -1,7 +1,12 @@
-@import "./theming";
-@import "./typography";
-@import "~bootstrap/scss/bootstrap";
+@import './theming';
+@import './typography';
+@import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import 'colors';
+@import 'nav';
+@import 'cards';
+@import 'buttons';
 
 body {
   margin: 0;
@@ -10,9 +15,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: #f6f7f9;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+
+  &:hover {
+    color: inherit;
+  }
 }
