--- a/frontend/src/assets/css/theming.scss
+++ b/frontend/src/assets/css/theming.scss
@@ -2,13 +2,18 @@
 @import "~bootstrap/scss/variables";
 
 /* stylelint-disable */
+$gu-blue: #463DA8;
+$gu-white: #f6f7f9;
+$gu-black: #1d1d1d;
+$gu-purple: #291965;
+$gu-pink: #EE2A64;
 
 $custom-colors: (
-  "gu-white": #f6f7f9,
-  "gu-black": #1d1d1d,
-  "gu-purple": #291965,
-  "gu-blue": #463DA8,
-  "gu-pink": #EE2A64,
+  "gu-white": $gu-white,
+  "gu-black": $gu-black,
+  "gu-purple": $gu-purple,
+  "gu-blue": $gu-blue,
+  "gu-pink": $gu-pink,
 ) !default;
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
