--- a/frontend/src/components/skills/styles.scss
+++ b/frontend/src/components/skills/styles.scss
@@ -1,7 +1,152 @@
-.skill-profile {
-    display: flex;
+.conteiner-proggres-bar{
+    max-width: 50px;
+    min-height: 50px;
+    margin: 0 auto;
 }
 
-.skill-rating {
+.b-progress-bar{
+    width: 50px;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
     text-align: center;
+}
+
+.b-progress-bar span{
+    display: inline-block;
+    vertical-align: middle;
+    background-color: #f6f7f9;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    font-size: 0.4rem;
+    line-height: 2.5;
+    color: black;
+    font-weight: bold;
+}
+
+.b-progress-bar div{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 25px;
+    height: 4px;
+    transform-origin: 0 -10%;
+}
+
+.activeBlock {
+    background-color: red;
+}
+
+.passiveBlock {
+    background-color: silver;
+}
+
+.b-progress-bar div:nth-child(1){
+    transform:rotate(277.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(2){
+    transform:rotate(287.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(3){
+    transform:rotate(297.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(4){
+    transform:rotate(307.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(5){
+    transform:rotate(322.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(6){
+    transform:rotate(332.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(7){
+    transform:rotate(342.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(8){
+    transform:rotate(352.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(9){
+    transform:rotate(7.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(10){
+    transform:rotate(17.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(11){
+    transform:rotate(27.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(12){
+    transform:rotate(37.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(13){
+    transform:rotate(52.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(14){
+    transform:rotate(62.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(15){
+    transform:rotate(72.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(16){
+    transform:rotate(82.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(17){
+    transform:rotate(97.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(18){
+    transform:rotate(107.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(19){
+    transform:rotate(117.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(20){
+    transform:rotate(127.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(21){
+    transform:rotate(142.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(22){
+    transform:rotate(152.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(23){
+    transform:rotate(162.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(24){
+    transform:rotate(172.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(25){
+    transform:rotate(188.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(26){
+    transform:rotate(197.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(27){
+    transform:rotate(207.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(28){
+    transform:rotate(217.5deg)translate(0,-50%);
+}
+
+.b-progress-bar div:nth-child(29){
+    transform:rotate(232.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(30){
+    transform:rotate(242.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(31){
+    transform:rotate(252.5deg)translate(0,-50%);
+}
+.b-progress-bar div:nth-child(32){
+    transform:rotate(262.5deg)translate(0,-50%);
 }
