--- a/frontend/src/components/okrs/styles.scss
+++ b/frontend/src/components/okrs/styles.scss
@@ -1,11 +1,11 @@
 .okr-container {
     margin-left: 15px;
     margin-bottom: 15px;
-    width: 18%;
-    height: 125px;
-    border: 2px solid black;
+    width: 285px;
+    height: 175px;
+    border: 2px solid #ff9900;
     border-radius: 10px;
-    padding: 8px;
+    padding: 8px 15px;
     display: grid;
     grid-template-columns: 1fr, 1fr, 30px;
     grid-template-rows: 1fr, 1fr, 100px;
@@ -37,6 +37,7 @@
 
 .timestamp {
     grid-area: t;
+    color: silver;
 }
 
 .OKR-page {
