fix: correct route path, change adaptive styles, comment tabs

--- a/frontend/src/components/profile/components/profile-info/career-card/career-card.scss
+++ b/frontend/src/components/profile/components/profile-info/career-card/career-card.scss
@@ -1,7 +1,8 @@
 .career-card {
-  border-color: #E1DBEA;
+  border: #E1DBEA;
   margin: 5px 15px 20px 15px;
   position: relative;
+  height: auto !important;
 
   &::before {
     position: absolute;
