--- a/frontend/src/components/profile/components/profile-info/profile-info.scss
+++ b/frontend/src/components/profile/components/profile-info/profile-info.scss
@@ -1,3 +1,5 @@
+@import 'assets/css/styles';
+
 .profile-info {
   display: grid;
   grid-template-areas:
@@ -27,12 +29,7 @@
   grid-area: p-main;
 }
 
-@media screen and (max-width: 1200px) {
-  .header-wrapper,
-  .main-wrapper {
-    padding: 0;
-  }
-
+@include media-breakpoint-down(xl) {
   .profile-info {
     grid-template-areas:
     "p-tabs"
