--- a/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
+++ b/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
@@ -1,3 +1,5 @@
+@import 'assets/css/styles';
+
 .edit-section {
   border-radius: 10px;
   margin: 12px 0;
@@ -31,7 +33,7 @@
   padding: 20px 28px 38px 34px;
 }
 
-@media screen and (max-width: 992px) {
+@include media-breakpoint-down(xl) {
   .edit-section {
     margin: 0;
     border-radius: 0;
