--- a/frontend/src/components/profile/components/profile-info/profile-main/profile-main.scss
+++ b/frontend/src/components/profile/components/profile-info/profile-main/profile-main.scss
@@ -1,3 +1,5 @@
+@import 'assets/css/styles';
+
 .profile-main {
   display: flex;
   width: 100%;
@@ -28,8 +30,7 @@
   margin-top: 50px;
 }
 
-
-@media screen and (max-width: 1200px) {
+@include media-breakpoint-down(xl) {
   .profile-main {
     display: block;
   }
