--- a/frontend/src/components/profile/components/profile-info/tabs/tabs.scss
+++ b/frontend/src/components/profile/components/profile-info/tabs/tabs.scss
@@ -1,4 +1,6 @@
-@media screen and (max-width: 576px) {
+@import 'assets/css/styles';
+
+@include media-breakpoint-down(sm) {
   .profile-nav-tabs{
     width: fit-content;
     margin: 0 auto;
