--- a/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
+++ b/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
@@ -41,14 +41,22 @@
 
   .edit-section-header {
     background-color: #463DA8;
+
+    &__edit {
+      color: #fff;
+      border: 2px solid #fff;
+    }
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  .edit-section-header {
     color: #fff;
 
     &__edit {
       position: relative;
-      color: #fff;
       width: 50px;
       height: 50px;
-      border: 2px solid #fff;
       border-radius: 100%;
 
       & > span {
