fix: rename scss styles

--- a/frontend/src/components/header/styles.scss
+++ b/frontend/src/components/header/styles.scss
@@ -59,3 +59,9 @@ $white-blue: #F0F3F9;
       width: 47.64px;
       height: 47.64px;
 }
+
+.following-opportunities-icon {
+    color: $gu-blue;
+    width: 30px;
+    height: 30px;
+}
