--- a/frontend/src/components/okrs/styles.scss
+++ b/frontend/src/components/okrs/styles.scss
@@ -1,48 +1,34 @@
 .okr-container {
-    margin-left: 15px;
-    margin-bottom: 15px;
     width: 285px;
     height: 175px;
     border: 2px solid #ff9900;
     border-radius: 10px;
-    padding: 8px 15px;
     display: grid;
     grid-template-columns: 1fr, 1fr, 30px;
     grid-template-rows: 1fr, 1fr, 100px;
     grid-template-areas:
-            "n n re"
+            "name name reached"
             "obj key ."
-            "t t t";
+            "time time time";
 }
 
 .OKR-name {
-    grid-area: n;
+    grid-area: name;
 }
 
 .reached {
-    grid-area: re;
-    align-self: start;
-    justify-self: end;
+    grid-area: reached;
 }
 
 .objectives {
     grid-area: obj;
-    align-self: start;
 }
 
 .key-result {
     grid-area: key;
-    align-self: start;
 }
 
 .timestamp {
-    grid-area: t;
+    grid-area: time;
     color: silver;
-}
-
-.OKR-page {
-    display: flex;
-    flex-direction: row;
-    // max-width: 900px;
-    flex-wrap: wrap;
 }
